<resources>
    <string name="app_name">Контакты</string>
    <string name="p_number">Номер телефона</string>
    <string name="name2">Фамилия</string>
    <string name="name1">Имя</string>
    <string name="add_contact">Добавить контакт</string>
    <string name="mail">Почта</string>
    <string name="save">Сохранить</string>
    <string name="address">Адрес</string>
    <string name="avatar">Аватар</string>
    <string name="edit">Редактировать</string>
    <string name="call">Звонок</string>
    <string name="message">Сообщение</string>
    <string name="sms">Написать SMS</string>
    <string name="select_contact">Выберите контакт слева!</string>
</resources>