<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".EditDialogFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="156dp"
                android:layout_height="151dp"
                android:layout_gravity="center"
                android:contentDescription="@string/avatar"
                android:onClick="selectPhoto"
                android:src="@drawable/photo"
                android:tag="0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_background"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:layout_weight="1"
                        android:autofillHints="username"
                        android:fontFamily="@font/ubuntu"
                        android:hint="@string/name1"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:textColor="@color/text"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/surname"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:layout_weight="1"
                        android:autofillHints="username"
                        android:fontFamily="@font/ubuntu"
                        android:hint="@string/name2"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:textColor="@color/text"
                        android:textSize="20sp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/p_number"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:autofillHints="phone"
                    android:fontFamily="@font/ubuntu"
                    android:hint="@string/p_number"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textColor="@color/text"
                    android:textSize="20sp"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:autofillHints="emailAddress"
                    android:fontFamily="@font/ubuntu"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/text"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:autofillHints="postalAddress"
                    android:fontFamily="@font/ubuntu"
                    android:hint="@string/address"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:textColor="@color/text"
                    android:textSize="20sp" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="edit"
        android:src="@drawable/tick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/save" />

</androidx.constraintlayout.widget.ConstraintLayout>